--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.1.0",
-    "vue-resource": "^0.9.3"
+    "vue-resource": "^0.9.3",
+    "vue-router": "^0.7.13"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
